fixing sidebar look on mobile view

--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -33,8 +33,8 @@ body {
   position: fixed; 
   left: -100%; 
   top: 0; 
-  width: 100%; 
-  height: 100%; 
+  width: 100vw; 
+  height: 100vh; 
   background: var(--background-color); 
   padding: 2rem 1rem; 
   color: white; 
@@ -47,6 +47,9 @@ body {
 } 
 
 body.menu-open {
+  height: 100%; 
+  position: fixed; 
+  width: 100%;
   overflow: hidden;
 }
 
